--- a/projeto/index.html
+++ b/projeto/index.html
@@ -1,50 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-    <!-- Googles Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div id="about-container">
-        <div id="logo">
-            <img src="img/saasweeklogo.png" alt="logo-SaaSWeek">
-            <h1>SaaS Week</h1>
-        </div>
-        <p id="exclusive">Webnar Exclusivo</p>
-        <h2>Aprenda a criar um software para gerar renda</h2>
-        <p id="date">29/10/2022 | 14h00 | 100% Gratuito</p>
-        <p id="description">
-            Neste evento você aprenderá a planejar um software SaaS.
-            E também a como comercializar o produto que você desenvolveu.
-        </p>
-        <h4>Palestrantes</h4>
-        <div id="users-container">
-            <div class="user-card">
-                <img src="img/user_1.jpg" alt="Paul Smith">
-                <p class="user-name">Paul Smith</p>
-                <p class="user-role">Gerente de Marketing</p>
-            </div>
-            <div class="user-card">
-                <img src="img/user_2.jpg" alt="Jhon Doe">
-                <p class="user-name">Jhon Doe</p>
-                <p class="user-role">Tech Lead</p>
-            </div>
-            <div class="user-card">
-                <img src="img/user_3.jpg" alt="Chris Mings">
-                <p class="user-name">Chris Mings</p>
-                <p class="user-role">Empreendedor</p>
-            </div>
-        </div>
-    </div>
 
-    <div id="subscribe-container">
-        <h1>Form</h1>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Document</title>
+        <!-- Googles Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap"
+            rel="stylesheet">
+    </head>
+
+    <body>
+        <div id="about-container">
+            <div id="logo">
+                <img src="img/saasweeklogo.png" alt="logo-SaaSWeek">
+                <h1>SaaS Week</h1>
+            </div>
+            <p id="exclusive">Webnar Exclusivo</p>
+            <h2>Aprenda a criar um software para gerar renda</h2>
+            <p id="date">29/10/2022 | 14h00 | 100% Gratuito</p>
+            <p id="description">
+                Neste evento você aprenderá a planejar um software SaaS.
+                E também a como comercializar o produto que você desenvolveu.
+            </p>
+            <h4>Palestrantes</h4>
+            <div id="users-container">
+                <div class="user-card">
+                    <img src="img/user_1.jpg" alt="Paul Smith">
+                    <p class="user-name">Paul Smith</p>
+                    <p class="user-role">Gerente de Marketing</p>
+                </div>
+                <div class="user-card">
+                    <img src="img/user_2.jpg" alt="Jhon Doe">
+                    <p class="user-name">Jhon Doe</p>
+                    <p class="user-role">Tech Lead</p>
+                </div>
+                <div class="user-card">
+                    <img src="img/user_3.jpg" alt="Chris Mings">
+                    <p class="user-name">Chris Mings</p>
+                    <p class="user-role">Empreendedor</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="subscribe-container">
+            <div id="form-inner">
+                <h3>Se inscreva</h3>
+                <p>Não perca a oportunidade de aprender com especialistas e tirar suas dúvidas</p>
+                <form id="register-form">
+                    <div id="name-container">
+                        <input type="text" name="name" id="name" placeholder="Nome" />
+                        <input type="text" name="lastname" id="lastname" placeholder="Sobrenome" />
+                    </div>
+                    <input type="text" name="email" id="email" placeholder="E-Mail">
+                    <input type="submit" value="Cadastrar">
+                </form>
+                <div id="benefits">
+                    <h4>O que você vai aprender</h4>
+                    <ul>
+                        <li>Como escolher uma stack de tecnologia</li>
+                        <li>Criar um projeto SaaS</li>
+                        <li>Prospectar clientes</li>
+                        <li>Estratégia de vendas</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
